# IMG_Resizer

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/app/: main.py
src/app/responses/: status_response.py  upload_responses.py
src/app/routers/: upload_router.py
src/domain/celery/: worker.py
src/domain/exceptions/: exception_handler.py  exceptions.py
src/infrastructure/: ioc.py  providers.py  utils.py
src/infrastructure/settings/: settings.py
src/infrastructure/storages/: interfaces.py  redis.py
src/services/: interfaces.py  upload_service.py
tests/: conftest.py  test_api.py  test_task.py
