[project]
name = "gku-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "vadim.melnik", email = "vadim.melnik@idaproject.com" }
]
dependencies = [
    "dishka>=1.3.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "greenlet>=3.0.3",
    "uvloop>=0.20.0",
    "uvicorn>=0.30.6",
    "fastapi>=0.115.5",
    "celery[redis]>=5.4.0",
    "pillow>=11.0.0",
    "python-multipart>=0.0.17",
    "aiofiles>=24.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gku_test"]
