[project]
name = "Image Resizer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Vadim Melnik", email = "vadimmelnik977@gmail.com" }
]
dependencies = [
    "dishka>=1.3.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "greenlet>=3.0.3",
    "uvloop>=0.20.0",
    "uvicorn>=0.30.6",
    "fastapi>=0.115.5",
    "celery[redis]>=5.4.0",
    "pillow>=11.0.0",
    "python-multipart>=0.0.17",
    "aiofiles>=24.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pip>=24.1.2",
    "ruff>=0.4.8",
    "pytest==7.4.4",
    "pytest-asyncio==0.21.1",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "commitizen>=3.27.0",
    "pytest-dotenv>=0.5.2",
    "factory-boy>=3.3.0",
    "faker>=26.0.0",
    "pytest-lazy-fixture>=0.6.3",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "asgi-lifespan>=2.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gku_test"]
